--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,19 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 text-center">
+    <h1>Sign up</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.text_field :first_name, autofocus: true, label: "First Name" %>
+        <%= f.text_field :last_name, autofocus: true, label: "Last Name" %>
+        <%= f.email_field :email, autofocus: true %>
+        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", label: "Password Confirmation" %>
+        <%= f.submit "Sign Up", class: "btn btn-primary" %>
+    <% end %>
 
-<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.text_field :first_name, autofocus: true, label: "First Name" %>
-    <%= f.text_field :last_name, autofocus: true, label: "Last Name" %>
-    <%= f.email_field :email, autofocus: true %>
-    <%= f.password_field :password, autocomplete: "off" %>
-    <%= f.password_field :password_confirmation, autocomplete: "off", label: "Password Confirmation" %>
-    <%= f.submit "Sign Up", class: "btn btn-primary" %>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
