--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -14,15 +14,19 @@
 
 <% @reviews.each do |review| %>
 <h3><%= review.headline %></h3>
-<%= review.body %>
-<%= review.rating %><br>
+<%= review.body %><br>
+Rating: <%= review.rating %>/5<br>
+Reviewed by: <%= review.user.first_name %>
 
 <h4>Comments: </h4>
 <ul>
   <% @comments[review.id].each do |comment| %>
     <p><%= comment.body %></p>
+    <% if @user == comment.user %>
+      <%= link_to "Edit", edit_representative_review_comment_path(@representative, review, comment) %>
+    <% end %>
   <% end %>
-  <%= link_to "Comment on this blast", new_representative_review_comment_path(@representative, review) %>
+  <p><%= link_to "Comment on this blast", new_representative_review_comment_path(@representative, review) %></p>
 
 </ul>
 <% end %>
