--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -24,6 +24,8 @@ Reviewed by: <%= review.user.first_name %>
     <p><%= comment.body %></p>
     <% if @user == comment.user %>
       <%= link_to "Edit", edit_representative_review_comment_path(@representative, review, comment) %>
+      <%= button_to "Delete", {controller: "comments", action: "destroy", representative_id: @representative.id, review_id: review.id, id: comment.id}, method: :delete %>
+
     <% end %>
   <% end %>
   <p><%= link_to "Comment on this blast", new_representative_review_comment_path(@representative, review) %></p>
