--- a/app/views/representatives/index.html.erb
+++ b/app/views/representatives/index.html.erb
@@ -6,4 +6,6 @@
   <% end %>
 </ul>
 
+<% if user_signed_in? %>
 <%= link_to "Put a new representative on blast!", new_representative_path %>
+<% end %>
