--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -23,8 +23,8 @@ Reviewed by: <%= review.user.first_name %>
   <% @comments[review.id].each do |comment| %>
     <p><%= comment.body %></p>
     <% if @user == comment.user %>
-      <%= link_to "Edit", edit_representative_review_comment_path(@representative, review, comment) %>
-      <%= button_to "Delete", {controller: "comments", action: "destroy", representative_id: @representative.id, review_id: review.id, id: comment.id}, method: :delete %>
+      <%= link_to "Edit Comment", edit_representative_review_comment_path(@representative, review, comment) %>
+      <%= button_to "Delete Comment", {controller: "comments", action: "destroy", representative_id: @representative.id, review_id: review.id, id: comment.id}, method: :delete %>
 
     <% end %>
   <% end %>
