--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -17,6 +17,13 @@
 <%= review.body %><br>
 Rating: <%= review.rating %>/5<br>
 Reviewed by: <%= review.user.first_name %>
+<% if @user == review.user %>
+  <%= link_to "Edit Review", edit_representative_review_path(@representative, review) %>
+  <%= button_to "Delete Review", {controller: "reviews", action: "destroy", representative_id: @representative.id, review_id: review.id}, method: :delete %>
+
+<% end %>
+
+
 
 <h4>Comments: </h4>
 <ul>
