--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -17,10 +17,11 @@
 <%= review.body %><br>
 Rating: <%= review.rating %>/5<br>
 Reviewed by: <%= review.user.first_name %>
-<% if @user == review.user %>
+<% if current_user == review.user %>
   <%= link_to "Edit Review", edit_representative_review_path(@representative, review) %>
   <%= button_to "Delete Review", {controller: "reviews", action: "destroy", representative_id: @representative.id, review_id: review.id}, method: :delete %>
-
+  <% elsif current_user.try(:admin?) %>
+  <%= button_to "Delete Review", {controller: "reviews", action: "destroy", representative_id: @representative.id, review_id: review.id}, method: :delete %>
 <% end %>
 
 
@@ -29,10 +30,11 @@ Reviewed by: <%= review.user.first_name %>
 <ul>
   <% @comments[review.id].each do |comment| %>
     <p><%= comment.body %></p>
-    <% if @user == comment.user %>
+    <% if current_user == comment.user %>
       <%= link_to "Edit Comment", edit_representative_review_comment_path(@representative, review, comment) %>
       <%= button_to "Delete Comment", {controller: "comments", action: "destroy", representative_id: @representative.id, review_id: review.id, id: comment.id}, method: :delete %>
-
+      <% elsif current_user.try(:admin?) %>
+      <%= button_to "Delete Comment", {controller: "comments", action: "destroy", representative_id: @representative.id, review_id: review.id, id: comment.id}, method: :delete %>
     <% end %>
   <% end %>
   <p><%= link_to "Comment on this blast", new_representative_review_comment_path(@representative, review) %></p>
