--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -25,9 +25,12 @@ Reviewed by: <%= review.user.first_name %>
 
 
 
-<%= button_to "Upvote", {controller: "upvotes", action: "create", representative_id: @representative.id, review_id: review.id}, method: :post %><br  />
-<%= review.votes %><br  />
-<%= button_to "Downvote", {controller: "downvotes", action: "create", representative_id: @representative.id, review_id: review.id}, method: :post %>
+<%= button_to "Upvote", {controller: "upvotes", action: "create", review_id: review.id}, method: :post %><br  />
+<div id="review<%= review.id %>">
+  <%= review.votes %>
+</div>
+<br  />
+<%= button_to "Downvote", {controller: "downvotes", action: "create", review_id: review.id}, method: :post %>
 
 <h4>Comments: </h4>
 <ul>
