--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
               <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
             </li>
             <li>
-              <%= link_to "Edit Account", edit_user_registration_path %>
+              <%= link_to current_user.first_name, edit_user_registration_path %>
             </li>
           <% else %>
             <li>
