--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,7 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
-    <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), label_errors: true, html: { method: :put }) do |f| %>
         <%= f.text_field :first_name, autofocus: true, label: "First Name" %>
         <%= f.text_field :last_name, autofocus: true, label: "Last Name" %>
         <%= f.email_field :email, autofocus: true %>
@@ -19,8 +19,6 @@
         <%= f.file_field :avatar %>
         <%= f.submit "Update", class: "btn btn-primary" %>
     <% end %>
-
-    <%= render "devise/shared/links" %>
   </div>
 </div>
 <div class="row">
