--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), label_errors: true) do |f| %>
         <%= f.text_field :first_name, autofocus: true, label: "First Name" %>
         <%= f.text_field :last_name, autofocus: true, label: "Last Name" %>
         <%= f.email_field :email, autofocus: true %>
