--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
               <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
             </li>
             <li>
-              <%= image_tag(current_user.avatar.url, size: "40x40", class:"img-circle") if current_user.avatar? %> <%= link_to current_user.first_name, edit_user_registration_path(current_user), class: "nav-link-right"%>
+              <%= image_tag(current_user.avatar.url, size: "40x40", class:"img-circle") if current_user.avatar? %> <%= link_to current_user.first_name, edit_user_registration_path, class: "nav-link-right"%>
             </li>
           <% else %>
             <li>
