--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,11 +11,13 @@
     <% end %>
 
     <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), label_errors: true, html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
         <%= f.text_field :first_name, autofocus: true, label: "First Name" %>
         <%= f.text_field :last_name, autofocus: true, label: "Last Name" %>
         <%= f.email_field :email, autofocus: true %>
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off", label: "Password (Leave Blank if you dont want to change it)" %>
         <%= f.password_field :password_confirmation, autocomplete: "off", label: "Password Confirmation" %>
+        <%= f.password_field :current_password, autocomplete: "off", label: "Current Password (Needed to save changes)" %>
         <%= f.file_field :avatar %>
         <%= f.submit "Update", class: "btn btn-primary" %>
     <% end %>
