--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,10 @@
             </li>
           <% end %>
         </ul>
-        <form class="navbar-form navbar-right">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+            <%= form_tag(representatives_path, :method => "get", id: "search-form", class: "navbar-form navbar-right") do %>
+                <%= text_field_tag :search, params[:search], placeholder: "Search Representatives" %>
+                <%= submit_tag "Search", :name => nil %>
+            <% end %>
       </div>
     </nav>
 
