passed all tests to send mailers

--- a/app/views/comment_mailer/new_comment.text.erb
+++ b/app/views/comment_mailer/new_comment.text.erb
@@ -1,5 +1,5 @@
 Whoa <%= @comment.review.user.first_name %>,
 
-<%= @comment.representative.first_name %> has commented on your review, <%= @comment.review.name %>.
+<%= @comment.user.first_name %> has commented on your review, <%= @comment.review %>.
 
 Holla!
