created react components

--- a/app/views/representatives/index.html.erb
+++ b/app/views/representatives/index.html.erb
@@ -16,4 +16,6 @@
 
 <% if @representatives.blank? %>
   <h4>There are no representatives containing <%= params[:search] %>.</h4>
-<% end %>
+<% end %> -->
+
+<!-- <%= javascript_pack_tag 'hello_react' %>
