add react-on-rails, configed for use with our app, adjusted components

--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @representative.first_name %> <%= @representative.last_name %></h1>
+<!-- <h1><%= @representative.first_name %> <%= @representative.last_name %></h1>
 <ul>
   <img src="<%= @representative.picture_url %>">
   <p><%= @representative.office %></p>
@@ -47,4 +47,5 @@ Reviewed by: <%= review.user.first_name %>
   <p><%= link_to "Comment on this blast", new_representative_review_comment_path(@representative, review) %></p>
 
 </ul>
-<% end %>
+<% end %> -->
+<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments}, prerender: false) %>
