--- a/app/views/representatives/index.html.erb
+++ b/app/views/representatives/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Representatives:</h1>
+<!-- <h1>Representatives:</h1>
 
 <ul>
   <% @representatives.each do |representative| %>
@@ -18,4 +18,6 @@
   <h4>There are no representatives containing <%= params[:search] %>.</h4>
 <% end %> -->
 
-<!-- <%= javascript_pack_tag 'hello_react' %>
+<!-- <%= javascript_pack_tag 'hello_react' %> -->
+
+<%= react_component("IndexPage", props: { data: @representatives, title: "Represenatives" }, prerender: true) %>
