adjusted feature tests to work with react, adjusted react components to pass some tests

--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -48,4 +48,4 @@ Reviewed by: <%= review.user.first_name %>
 
 </ul>
 <% end %> -->
-<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments}, prerender: false) %>
+<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments}, prerender: true) %>
