--- a/app/views/representatives/index.html.erb
+++ b/app/views/representatives/index.html.erb
@@ -18,4 +18,4 @@
   <h4>There are no representatives containing <%= params[:search] %>.</h4>
 <% end %> -->
 
-<%= react_component("IndexPage", props: { data: @representatives, title: "Represenatives" }, prerender: false) %>
+<%= react_component("IndexPage", props: { data: @representatives, title: "Represenatives" }, prerender: true) %>
