--- a/app/views/representatives/new.html.erb
+++ b/app/views/representatives/new.html.erb
@@ -1,23 +1,21 @@
-<h1>Put a new Representative on blast!</h1>
-
-<%= form_for @representative do |f| %>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %><br />
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %><br />
-  <%= f.label :email %>
-  <%= f.text_field :email %><br />
-  <%= f.label :office %>
-  <%= f.text_field :office %><br />
-  <%= f.label :party %>
-  <%= f.text_field :party %><br />
-  <%= f.label :elected %>
-  <%= f.text_field :elected %><br />
-  <%= f.label :bio %>
-  <%= f.text_field :bio %><br />
-  <%= f.label :phone_number %>
-  <%= f.text_field :phone_number %><br />
-  <%= f.label :picture_url %>
-  <%= f.text_field :picture_url %><br />
-  <%= f.submit "Add Representative" %>
-<% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 text-center">
+    <h1>Put a new Representative on blast!</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= bootstrap_form_for @representative do |f| %>
+        <%= f.text_field :first_name,label: "First Name" %>
+        <%= f.text_field :last_name, label: "Last Name" %>
+        <%= f.email_field :email %>
+        <%= f.text_field :office %>
+        <%= f.date_select :elected %>
+        <%= f.text_field :party, label: "Party Affiliation" %>
+        <%= f.text_area :bio, label: "Representative Bio:" %>
+        <%= f.text_field :phone_number, label: "Phone Number" %>
+        <%= f.text_field :picture_url, label: "Representative Picure Link:" %>
+        <%= f.submit "Add Representative", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
