Working on feature tests with react

--- a/app/views/representatives/new.html.erb
+++ b/app/views/representatives/new.html.erb
@@ -12,9 +12,9 @@
         <%= f.text_field :office %>
         <%= f.date_select :elected %>
         <%= f.text_field :party, label: "Party Affiliation" %>
-        <%= f.text_area :bio, label: "Representative Bio:" %>
+        <%= f.text_area :bio, label: "Representative Bio" %>
         <%= f.text_field :phone_number, label: "Phone Number" %>
-        <%= f.text_field :picture_url, label: "Representative Picure Link:" %>
+        <%= f.text_field :picture_url, label: "Representative Picure Link" %>
         <%= f.submit "Add Representative", class: "btn btn-primary" %>
     <% end %>
   </div>
