made some components statefull, added fetch calls for posting new data

--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments, user: @user}, prerender: true) %>
+<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments, user: @user}, prerender: false) %>
