--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,13 @@ ul li img {
     vertical-align: middle;
     padding-top: 3px;
 }
+
+ul li input[type=submit] {
+
+}
+
+img {
+    height: 150px;
+    width: 150px;
+    margin-bottom: 20px;
+}
