--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments, user: @user}, prerender: false) %>
+<%= react_component("RepPage", props: { rep: @representative, reviews: @reviews, comments: @comments, user: @user, userId: @user_id}, prerender: false) %>
