--- a/app/views/representatives/index.html.erb
+++ b/app/views/representatives/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("IndexPage", props: { data: @representatives, title: "Represenatives" }, prerender: true) %>
+<%= react_component("IndexPage", props: { data: @representatives, title: "Representatives" }, prerender: true) %>
