--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,16 +8,13 @@
 }
 
 ul li img {
-    vertical-align: middle;
-    padding-top: 3px;
+  vertical-align: middle;
+  padding-top: 3px;
 }
 
-ul li input[type=submit] {
+.card-image {
 
-}
-
-img {
-    height: 150px;
-    width: 150px;
-    margin-bottom: 20px;
+   width: 200px;
+   height: 250px;
+   margin-bottom: 5px;
 }
