added edit and delete

--- a/app/views/representatives/index.html.erb
+++ b/app/views/representatives/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("IndexPage", props: { data: @representatives, title: "Representatives" }, prerender: false) %>
+<%= react_component("IndexPage", props: { data: @representatives, user_signed_in: @user_signed_in, title: "Representatives" }, prerender: false) %>
