--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,12 @@
 @import "bootstrap";
 @import "rails_bootstrap_forms";
 
-.nav-link-right {
-  float: right;
+body {
+  background-image: url("https://image.ibb.co/jc2AB5/onblastbackground.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 ul li img {
