--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,11 +3,11 @@
 @import "bootstrap";
 @import "rails_bootstrap_forms";
 
-body {
-  background-image: url("https://image.ibb.co/jc2AB5/onblastbackground.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
+html {
+  background: url(https://image.ibb.co/jc2AB5/onblastbackground.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
@@ -44,9 +44,8 @@ img {
 .yellow {
   background-color: #F0AD4E;
 }
-body {
-  background-color: #B40404;
-}
+
+
 div.container {
   margin: auto;
 }
