--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "bootstrap";
 @import "rails_bootstrap_forms";
 
-html {
+body {
   background: url(https://image.ibb.co/jc2AB5/onblastbackground.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
