--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,13 @@ img {
   max-width: 75%;
 }
 
+.panel-body {
+  background: #0B0B61;
+}
 
+.img-circle {
+  border: 3px solid white;
+}
 
 .navbar {
   background-color: #0B0B61;
