--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@ img {
   color: white;
 }
 
+.rep-title {
+  text-shadow: 0px 5px 5px rgba(247, 5, 5, 0.54), 0px 7px 5px rgba(243, 237, 237, 0.85), 0px 10px 5px rgba(12, 72, 241, 0.73);
+}
+
 .img-circle {
   border: 3px solid white;
 }
